--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>web_app</title>
+  <title>Viktor_Hermann_Portfolio</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
